@@ -6,7 +6,12 @@ Please add your contributions.
 	* A second option for independent
 	  sets calculation FIXED-N-SETS
 	  (suitable for networks)       Gaoyuan Wang
-	*
+	* The option to calculated the
+	  bond energy and bond force with
+	  minmum image convention is
+	  added                         Gaoyuan Wang
+	  (MIC needs to be compiled and
+	  runned with MIC flag)
 
 	v0.5.2 not-yet-released
 
